<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App -->
    <string name="app_name">Topaz</string>
    <string name="todo">TODO</string>
    <!-- Drawer -->
    <string name="drawer_search">Recherche image</string>
    <string name="drawer_search_hint">Recherche par #Tag</string>
    <string name="action_settings">Paramètres</string>
    <string name="drawer_image">Icône du bouton</string>

    <string-array name="views_array">
        <item>Utilisateur</item>
        <item>Recherche</item>
        <item>La carte</item>
        <item>Paramètres</item>
        <item>Au sujet de l\'equipe :D</item>
    </string-array>

    <string name="drawer_open">Ouvrir le volet de navigation</string>
    <string name="drawer_close">Fermer le volet  de navigation</string>
    <string name="app_not_available">Le navigateur n\'est pas disponible.</string>

    <!-- About -->
    <string name="about_text">L\'equipe Topaz est géniale!:p\n\n\nAlina Gherman,\nBenjamin Bouchardon,\nHugo Muller,\nAlexandre Jablon,\nXiaoyu Feng,\nJean-Baptiste Ghoul</string>
    <!-- bulle -->
    <string name="bulle_loyen_cluster">Voir les aperçus des messages</string>
    <string name="bulle_note">avis</string>
    <string name="bulle_says">dit:</string>
    <string name="bulle_anonyme"> Un utilisateur anonyme </string>
    <!-- comment -->
    <string name="comment_user_icon">Icône de l\'utilisateur</string>
    <string name="comment_hint">Écrivez votre commentaire</string>
    <string name="comment_loading">Chargement&#8230;</string> <!-- '...' -->
    <string name="comment_like">like icon</string>
    <string name="comment_send">like send</string>
    <string name="comment_dislike">unlike icon</string>
    <string name="comment_share">share icon</string>
    <string name="desc_message_picture">Image du message</string>
    <string name="date_format">dd MMM yyyy - hh:mm</string>
    <!-- auth -->
    <string name="auth_banner_not_verified">Compte non confirmé</string>
    <string name="auth_activity">Rester connecté&#8230; simple et efficace</string>
    <string name="auth_sign_in">Login</string>
    <string name="auth_sign_up">Créer un compte</string>
    <string name="auth_username">Utilisateur</string>
    <string name="auth_password">Mot de passe</string>
    <string name="auth_confirm_password">Confirmation mot du passe</string>
    <string name="auth_email">Email</string>
    <string name="auth_sign_in_welcome">Bienvenue à nouveau !</string>
    <string name="auth_sign_up_welcome">Créer un nouveau compte!</string>
    <string name="auth_no_user">Vous n\'avez pas de compte ?</string>
    <string name="auth_user">Vous avez déjà un compte ?</string>
    <string name="auth">Utilisateur</string>
    <string name="auth_view_profile">Regarde ton profil</string>
    <string name="auth_username_not_exist">Utilisateur inexistant</string>
    <string name="auth_username_error">Utilisez seulement des lettres, des chiffres et _</string>
    <string name="auth_conflictusername_error">Nom déjà utilisé</string>
    <string name="auth_username_tooshort">Nom trop court (4 caractères min)</string>
    <string name="auth_usermail_error">Format d\'email incorrect</string>
    <string name="auth_conflictusermail_error">Email déjà utilisé</string>
    <string name="auth_userpwd_not_match">Mot de passe incorrect</string>
    <string name="auth_userpwd_error">Mot de passe trop court (6 caractères min)</string>
    <string name="auth_userconfirmpwd_error">Retapez votre mot de passe</string>
    <string name="auth_unconnect">Déconnexion</string>
    <string name="auth_camera">Camera</string>
    <!-- User page -->
    <string name="user_tab_info">Profil</string>
    <string name="user_tab_comments">Messages</string>
    <string name="user_tab_info_status">Description :</string>
    <string name="user_tab_info_old_pass">Mot de passe actuel</string>
    <string name="user_tab_info_new_pass">Nouveau mot de passe</string>
    <string name="user_tab_save">Sauvegarder</string>
    <string name="user_tab_cancel">Annuler</string>
    <string name="user_tab_change_pass">Changer le mot de passe</string>
    <string name="user_tab_edit">changer</string>
    <string name="user_tab_save_ok">Le champ a été sauvgardé.</string>
    <string name="user_tab_user">Utilisateur :</string>
    <string name="user_tab_email">Email : </string>
    <string name="user_tab_save_field">Le champ a bien été sauvagardé.</string>
    <string name="user_tab_no_messages_me">Vous n\'avez écris aucun message. </string>
    <string name="user_tab_no_messages">Ce utilisateur n\'as écrit aucun message. </string>
    <!-- Settings -->
    <string name="settings_a_propos_header">A PROPOS</string>
    <string name="settings_a_propos_text">Version 1.0</string>
    <string name="settings_msg_header">MESSAGES</string>
    <string name="settings_msg_text">Visibilité</string>
    <string name="comment_unlike">unlike icon</string>
    <!-- PlaceSearch -->
    <string name="search_hint">Rechercher un lieu</string>
    <!-- Pop Up -->
    <string name="ok">OK</string>
    <string name="warning_network">Erreur connexion reseaux.</string>
    <!-- Map -->
    <string name="location_button">Ma position</string>
    <!-- Selection d'images -->
    <string name="select_img_take_photo">Prendre une photo</string>
    <string name="select_img_from_lib">Image enregistrée</string>
    <string name="select_img_close">Annuler</string>
    <!-- TagSuggestion -->
    <string name="tag_image">Icon du tag</string>
</resources>
