<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            style="@style/text_dark_gray_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/settings_msg_header" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/light_gray" />

        <TextView
            style="@style/text_gray_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/settings_msg_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            style="@style/text_dark_gray_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/settings_a_propos_header" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/light_gray" />

        <TextView
            style="@style/text_gray_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/settings_a_propos_text" />
    </LinearLayout>

</LinearLayout>