<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@color/light_gray"
    android:padding="8dp" >

    <RelativeLayout
        android:id="@+id/comment_item_linear_layout_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/light_gray"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/comment_linear_layout_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/comment_image_first_comment"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/comment_user_icon"
                android:scaleType="center"
                android:src="@drawable/ic_user" />

            <TextView
                android:id="@+id/comment_person_name"
                style="@style/text_dark_gray_big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment_loading" />

            <TextView
                android:id="@+id/comment_time"
                style="@style/text_dark_gray_big"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="8dp"
                android:gravity="right"
                android:text="@string/comment_loading" />
        </LinearLayout>

        <TextView
            android:id="@+id/comment_first_comment_text"
            style="@style/text_dark_gray_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_loading" />

        <ProgressBar
            android:id="@+id/progressBarPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/comment_first_picture_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/desc_message_picture"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="8dp" >

            <TextView
                android:id="@+id/textViewLikes"
                style="@style/text_gray_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/comment_like"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="4dp"
                android:background="@null"
                android:contentDescription="@string/comment_like"
                android:scaleType="center"
                android:src="@drawable/animation_like_button" />

            <TextView
                android:id="@+id/textViewDislikes"
                style="@style/text_gray_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/comment_dislike"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="4dp"
                android:background="@null"
                android:contentDescription="@string/comment_dislike"
                android:scaleType="center"
                android:src="@drawable/animation_dislike_button" />

            <ImageButton
                android:id="@+id/comment_share"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="4dp"
                android:background="@null"
                android:contentDescription="@string/comment_share"
                android:onClick="shareMessage"
                android:scaleType="center"
                android:src="@drawable/ic_share" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>